# computer_vision_utility

./: .gitignore  CMakeLists.txt  CMakePresets.template - Copy.json  CMakePresets.template.json  README.md  vcpkg.json
include/cvtool/commands/: blur.hpp  contours.hpp  edges.hpp  gesture_show.hpp  gray.hpp  info.hpp  match.hpp  match_validate.hpp  video_edges.hpp
include/cvtool/core/: contours_core.hpp  edges_pipeline.hpp  exit_codes.hpp  image_convert.hpp  image_io.hpp  match_types.hpp  rois_edges.hpp  template_match.hpp  threshold.hpp  validate.hpp  video_io.hpp
include/cvtool/core/gesture/: contextual_gesture_rules.hpp  display_utils.hpp  face_landmark_detector.hpp  face_landmarks.hpp  gesture_bank.hpp  gesture_domain.hpp  gesture_rules.hpp  gesture_stabilizer.hpp  hand_landmark_detector.hpp  hand_landmarks.hpp
include/cvtool/core/match/: match_heatmap.hpp  match_json.hpp  match_prepare.hpp  match_render.hpp  match_search_ms.hpp
src/: main.cpp
src/commands/: blur.cpp  contours.cpp  edges.cpp  gesture_show.cpp  gray.cpp  info.cpp  match.cpp  match_validate.cpp  video_edges.cpp
src/core/: contours_core.cpp  edges_pipeline.cpp  image_convert.cpp  image_io.cpp  rois_edges.cpp  template_match.cpp  threshold.cpp  validate.cpp  video_io.cpp
src/core/gesture/: contextual_gesture_rules.cpp  display_utils.cpp  face_landmark_detector.cpp  gesture_bank.cpp  gesture_domain.cpp  gesture_rules.cpp  gesture_stabilizer.cpp  hand_landmark_detector.cpp
src/core/match/: match_heatmap.cpp  match_json.cpp  match_prepare.cpp  match_render.cpp  match_search_ms.cpp
vcpkg-triplets/: x64-windows-onnxfix.cmake
